--- a/MvcMovie/Views/Movies/Edit.cshtml
+++ b/MvcMovie/Views/Movies/Edit.cshtml
@@ -52,7 +52,7 @@
             @Html.LabelFor(model => model.Rating, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Rating, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Rating, "", new { @class = "text-danger" })
+                @Html.ValidationMessageFor(model => model.Rating, "Solo se permiten letras", new { @class = "text-danger" })
             </div>
         </div>
 
